# NVSHMEM-archive

./: .gitattributes  CMakeLists.txt  COPYRIGHT.txt  Makefile  NVSHMEM-SLA.txt  NVSHMEMConfig.cmake.in  changelog  common.mk  git_commit.txt  log_1718761303.txt  log_1738682419.txt  log_1749857346.txt  nvshmem_bootstrap.sym  nvshmem_host.sym  version.mk
examples/: CMakeLists.txt  Makefile  bootstrap_helper.h  collective-launch.cu  dev-guide-ring-mpi.cu  dev-guide-ring.cu  hello.cpp  moe_shuffle.cu  mpi-based-init.cu  on-stream.cu  put-block.cu  put_block.cu  ring-bcast.cu  ring-reduce.cu  shmem-based-init.cu  thread-group.cu  user-buffer.cu
examples/gemm_allreduce/: allreduce_nvls_warpspecialized.hpp  gemmAR_fusion_blackwell_fp16.cu  nvshmemAlloc.hpp  sm100_gemm_tma_warpspecialized_allreduce.hpp
nvshmem4py/: CMakeLists.txt  MANIFEST.in  pyproject.toml  requirements_build.txt  requirements_cuda11.txt  requirements_cuda12.txt  requirements_cuda13.txt  requirements_optional.txt  requirements_optional_cuda11.txt  setup.py
nvshmem4py/cmake/: buildWheel.cmake
nvshmem4py/examples/: init_fini.py  on-stream.py  simple_p2p_kernel.py  torch_triton_interop.py  triton_comm_kernels.py
nvshmem4py/nvshmem/: __init__.py
nvshmem4py/nvshmem/bindings/: __init__.py  cynvshmem.pxd  cynvshmem.pyx  nvshmem.pxd  nvshmem.pyx
nvshmem4py/nvshmem/core/: __init__.py  _internal_tracking.py  collective.py  direct.py  init_fini.py  memory.py  nvshmem_types.py  rma.py  utils.py
nvshmem4py/perftest/: alltoall_on_stream.py  broadcast_on_stream.py  fcollect_on_stream.py  reducescatter_on_stream.py  reduction_on_stream.py  utils.py
nvshmem4py/scripts/: find_python_versions.sh  generate_pyproject_toml.py
perftest/: CMakeLists.txt  Makefile  perftest-ib.list  perftest-mmap-full.list  perftest-mmap-sanity.list  perftest-p2p-cudagraph.list  perftest-p2p.list  perftestCommon.py  perftestRunner.py
perftest/common/: CMakeLists.txt  atomic_bw_common.h  atomic_one_sided_common.h  atomic_ping_pong_common.h  utils.cu  utils.h
perftest/device/: CMakeLists.txt
perftest/device/coll/: CMakeLists.txt  alltoall_bw.cu  alltoall_latency.cu  barrier_latency.cu  bcast_latency.args  bcast_latency.cu  coll_test.h  collect_latency.cu  fcollect_latency.cu  redmaxloc_latency.cu  reducescatter_latency.args  reducescatter_latency.cu  reduction_latency.args  reduction_latency.cu  sync_latency.args  sync_latency.cu
perftest/device/pt-to-pt/: CMakeLists.txt  shmem_atomic_add_ping_pong_latency.cu  shmem_atomic_and_ping_pong_latency.cu  shmem_atomic_bw.args  shmem_atomic_bw.cu  shmem_atomic_compare_swap_ping_pong_latency.cu  shmem_atomic_inc_ping_pong_latency.cu  shmem_atomic_latency.cu  shmem_atomic_or_ping_pong_latency.cu  shmem_atomic_ping_pong_latency.args  shmem_atomic_ping_pong_latency.cu  shmem_atomic_set_ping_pong_latency.cu  shmem_atomic_swap_ping_pong_latency.cu  shmem_atomic_xor_ping_pong_latency.cu  shmem_g_bw.args  shmem_g_bw.cu  shmem_g_latency.args  shmem_g_latency.cu  shmem_get_bw.args  shmem_get_bw.cu  shmem_get_latency.args  shmem_get_latency.cu  shmem_p_bw.args  shmem_p_bw.cu  shmem_p_latency.args  shmem_p_latency.cu  shmem_p_ping_pong_latency.args  shmem_p_ping_pong_latency.cu  shmem_put_atomic_ping_pong_latency.cu  shmem_put_bw.args  shmem_put_bw.cu  shmem_put_latency.args  shmem_put_latency.cu  shmem_put_ping_pong_latency.cu  shmem_put_signal_ping_pong_latency.args  shmem_put_signal_ping_pong_latency.cu  shmem_signal_ping_pong_latency.args  shmem_signal_ping_pong_latency.cu  shmem_st_bw.args  shmem_st_bw.cu
perftest/device/tile/: CMakeLists.txt  tile_allgather_latency.cu  tile_allreduce_latency.cu  tile_coll_test.h
perftest/host/: CMakeLists.txt
perftest/host/coll/: CMakeLists.txt  alltoall.cpp  alltoall_on_stream.cpp  barrier.cpp  barrier_all.cpp  barrier_all_on_stream.cpp  barrier_on_stream.args  barrier_on_stream.cpp  broadcast.cpp  broadcast_on_stream.args  broadcast_on_stream.cpp  coll_test.h  collect.cpp  collect_on_stream.cpp  fcollect.cpp  fcollect_on_stream.args  fcollect_on_stream.cpp  reducescatter_on_stream.args  reducescatter_on_stream.cpp  reduction.cpp  reduction_on_stream.cpp  sync.cpp  sync_all.cpp  sync_all_on_stream.cpp  sync_on_stream.args  sync_on_stream.cpp
perftest/host/init/: malloc.cpp
perftest/host/pt-to-pt/: bw.args  bw.cpp  (+3 more)
src/: CMakeLists.txt
src/bootstrap/: bootstrap.cpp  bootstrap_internal.h  bootstrap_loader.cpp  bootstrap_mpi.c  bootstrap_mpi.cpp  bootstrap_pmi.cpp  bootstrap_pmix.c  bootstrap_pmix.cpp  bootstrap_shmem.c  bootstrap_shmem.cpp  bootstrap_util.h
src/comm/: sync_kernels.cuh  transport.cpp
src/device/: CMakeLists.txt
src/include/: .nvshmem_common.cuh.swo  .nvshmem_common.cuh.swp  .nvshmem_internal.h.swp  .nvshmemx_defines.h.swp  bootstrap.h  bootstrap_internal.h  coll_shorthand.h  common.h  cudawrap.h  debug.h  env_defs.h  error_codes_internal.h  nvshmem.h  nvshmem_api.h  nvshmem_bootstrap.h  nvshmem_bootstrap_defines.h  nvshmem_build_options.h.in  nvshmem_coll_api.h  nvshmem_coll_common.h  nvshmem_coll_define.h  nvshmem_common.cuh  nvshmem_constants.h  nvshmem_defines.h  nvshmem_internal.h  nvshmem_nvtx.hpp  nvshmem_types.h  nvshmem_version.h.in  nvshmemi_coll.h  nvshmemi_constants.h  nvshmemi_gic.h  nvshmemi_ibgda.h  nvshmemi_proxy.h  nvshmemi_team.h  nvshmemi_transfer.h  nvshmemi_transport_defines.h  nvshmemi_util.h  nvshmemx.h  nvshmemx_api.h  nvshmemx_coll_api.h  nvshmemx_defines.h  (+7 more)
src/init/: .cudawrap.cc.swp  .init.cu.swo  .init.cu.swp  .init_device.cu.swp  cudawrap.cpp  gic_init.cu  gic_init_device.cu  ibgda_init.cu  ibgda_init_device.cu  init.cpp  init.cu  init_device.cu  init_nvtx.cpp  query.cu  query_device.cu  query_host.cpp
src/launch/: collective_launch.cpp  collective_launch_device.cu
src/mem/: custom_malloc.cpp  dlmalloc.cpp  dlmalloc.h  mem.cpp
src/pmi/: simple_pmi.cpp  simple_pmiutil.cpp
src/team/: team.cu  team_device.cu  team_internal.cu  team_internal.h  team_internal_device.cu
src/topo/: topo.cpp  topo.h
src/util/: cs.cpp  debug.cpp  env_vars.cpp  nvshmem-info.cpp  shared_memory.cpp  sockets.cpp  util.cpp
(+363 files in other folders)
